--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,36 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"kiri-hat-live","appId":"1:463362132648:android:0c699a6967c5e0e5eb109d","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"kiri-hat-live","configurations":{"android":"1:463362132648:android:0c699a6967c5e0e5eb109d","web":"1:463362132648:web:79aebf29f10dfebfeb109d"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "kiri-hat-live",
+          "appId": "1:463362132648:android:0c699a6967c5e0e5eb109d",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "kiri-hat-live",
+          "configurations": {
+            "android": "1:463362132648:android:0c699a6967c5e0e5eb109d",
+            "web": "1:463362132648:web:79aebf29f10dfebfeb109d"
+          }
+        }
+      }
+    }
+  },
+  "hosting": {
+    "public": "build/web",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }
+}
