--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   cloud_firestore: ^6.1.1
   image_picker: ^1.2.1
   firebase_storage: ^13.0.5
+  http: ^1.6.0
+  pinput: ^6.0.1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
